--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -16,7 +16,7 @@
 
 \title{Identify differential APA usage from RNA-seq alignments}
 
-\date{\Rpackage{roar} version \Sexpr{packageDescription("roar")$Version} (Last revision 2013-10-08)}
+\date{\Rpackage{roar} version \Sexpr{packageDescription("roar")$Version} (Last revision 2013-10-10)}
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 %\SweaveOpts{concordance=TRUE}
@@ -312,7 +312,7 @@ Then with simple algebraic steps:
       M = \frac{\#r_{POST}}{\epsilon_{M} (\frac{l_{POST}}{l_{PRE}+l_{POST}}) }
   \end{array} \right.
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math} \left\{
   \begin{array}{l}
       m = \frac{\#r_{PRE}-\epsilon_{M} \frac{\#r_{POST}}{\epsilon_{M} (\frac{l_{POST}}{l_{PRE}+l_{POST}}) }
@@ -320,48 +320,75 @@ Then with simple algebraic steps:
       M = ``
   \end{array} \right.
 \end{math}
-
-
+\vspace{0.5cm} \\
 \begin{math} \left\{
   \begin{array}{l}
       m = \frac{\#r_{PRE}-  \#r_{POST} (\frac{l_{PRE}+l_{POST}}{l_{POST}}) (\frac{l_{PRE}}{l_{PRE}+l_{POST}})}{\epsilon_{m} } \\
       M = ``
   \end{array} \right.
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math} \left\{
   \begin{array}{l}
       m = \frac{\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})}{\epsilon_{m} } \\
       M = ``
   \end{array} \right.
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math} \left\{
   \begin{array}{l}
       m = k/l_{PRE} (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})) \\
       M = \frac{k}{l_{PRE}+l_{POST}} \frac{(l_{PRE}+l_{POST})}{l_{POST}} \#r_{POST}
   \end{array} \right.
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math}
 m/M = \frac{k/l_{PRE} (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}}))}{k/l_{POST} \#r_{POST}}
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math}
 m/M =  \frac{l_{POST}}{\#r_{PRE} l_{PRE}} (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})) 
 \end{math}
-
+\vspace{0.5cm} \\
 \begin{math}
 m/M = \frac{l_{POST} \#r_{PRE}}{\#r_{PRE} l_{PRE}} 
 - \frac{l_{POST} \#r_{POST} l_{PRE}}{\#r_{POST} l_{PRE} l_{POST}}
 \end{math}
-
+\vspace{0.5cm} \\
+And finally the formula to obtain $m/M$ using only read counts and lengths:
 \begin{math}
 m/M = \frac{l_{POST} \#r_{PRE}}{l_{PRE} \#r_{POST}} -1
 \end{math}
+\vspace{0.5cm} \\
+\textbf{XXX TODO check equations}
 
-\textbf{XXX TODO check equations, example case, stop}
+As a simple emblematic case suppose that the PRE and POST portion have the same lengths and that the
+short and long isoforms are in perfect equilibrium (i.e. they are present in a cell in equal numbers).
+In this situation we will find on the PRE portion two times the number of reads falling on the POST 
+one because half of them will derive from the long isoforms and the other half from the short ones. 
+In this case the equation correcly gives us an $m/M$ equal to 1.
 
+In the previous discussion we have ignored reads falling across the PRE/POST boundaries. As long
+as they can derive only from the long isoform it is reasonable to assign them to $\#r_{POST}$.
+
+Portion lengths should be corrected to keep in consideration read lengths and the just cited
+assignment to POST of the spanning reads, therefore:\\\vspace{0.5cm}
+\begin{math}
+l^{\prime}_{PRE} = l_{PRE} % come si scrivono gli apici in math mode?
+\end{math}
+\vspace{0.2cm} \\
+\begin{math}
+l^{\prime}_{POST} = l_{POST} + readLength - 1
+\end{math}
+\vspace{0.5cm} \\ % find a suitable relative measure XXX TODO
+
+Normally we should have added readLength to both the lengths but in this case we do not expect
+reads to fall after the POST portion (that is the end of transcripts) and thus we only have to correct
+for the spanning reads. We do not subtract the same value from $l_{PRE}$ as long as in theory we could expect
+reads to fall at its 5' (i.e. reads falling across that exon and the previous one or those 
+from still unspliced transcripts).
+
+These corrected lengths are those used for the $m/M$ calculations.
 \bibliography{roar} % bib in the same dir as .Rnw
 \bibliographystyle{plain}
 
