--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -46,6 +46,7 @@
 \section{Introduction}
 The alternative polyadenylation mechanism at the basis of the existence of short and long isoforms
 of the same gene is reviewed in Elkon et al~\cite{Elkon2013}.
+\textbf{Get some sentences from the poster abstract? XXX}
 
 \section{Input data}
 A roar analysis starts from some alignments, obtained via standard RNAseq experiments
@@ -83,7 +84,7 @@ of the transcript) reported APA
 site found in PolyA\_DB is used to define the end of the short isoform. Therefore
 we define the ``PRE'' portion as the stretch of DNA starting from the beginning of the exon containing 
 (or proximal to) the APA site and ending at the site position, while the POST portion starts 
-at the beginning of the last exon and ends
+at the beginning of the last exon (or at the APA site if it falls on the last exon) and ends
 at the canonical transcript end. Using only the nearest exon to the APA site and not the entire
 transcript to define the short isoform avoids spurious signals deriving from other alternative
 splicing events.
@@ -152,7 +153,7 @@ This is the second step in the Roar analysis: it computes the ratio of prevalenc
 of the short and long isoforms for every gene in the right and left condition (m/M) and their
 ratio, roar, that indicates if there is a relative shortening-lengthening in a condition
 versus the other one.
-For details about the m/M calculations see the section~\ref{appendix}.
+For details about the m/M calculations see section~\ref{appendix}.
 
 A roar > 1 for a given gene means that in the right condition
 that gene has an higher ratio of short vs long isoforms with respect to the left condition (and
@@ -240,9 +241,10 @@ from the longer one; another more trivial question that has to be addressed is t
 frequencies on longer stretches of RNA.
 
 We define $l_{PRE}$ as the length of the PRE portion and $l_{POST}$ as the length of the POST one
-%therefore assuming that each nucleotide has the same probability of giving rise to a read we
-%can say that the total number of reads falling over a transcript in its entirety derives
-and we know that the total number of reads falling over a transcript ($N$) in its entirety derives
+therefore assuming that each nucleotide has the same probability of giving rise to a read (equiprobability
+assumption) we
+can say that the total number of reads falling over a transcript in its entirety ($N$) derives
+%and we know that the total number of reads falling over a transcript ($N$) in its entirety derives
 from the relative abundance of the two isoforms and their potential of generating reads; 
 that is: $ N = \epsilon_{M}  M + \epsilon_{m}  m$
 where $m$ is the quantity of the short isoform, $M$ of the long one and $\epsilon$ identifies their
@@ -273,7 +275,7 @@ on their lengths.
 
 Assuming the equiprobability of read distribution (that is each nucleotide has the same probability 
 of finding itself in a read) the efficiency in generating reads of the two isoforms is itself
-related to their lengths:\vspace{0.4cm} \\
+related to their lengths (with the addition of a constant of proportionality $k$):\vspace{0.4cm} \\
 \begin{math}
 \epsilon_{M} = \frac{l_{PRE}+l_{POST}}{k}
 \end{math}
@@ -281,13 +283,12 @@ related to their lengths:\vspace{0.4cm} \\
 \begin{math}
 \epsilon_{m} = \frac{l_{PRE}}{k}
 \end{math}
+%\vspace{0.4cm}\\
+%\begin{math}
+%k \sim l_{PRE} + l_{PRE} + l_{POST}
+%\end{math}
 \vspace{0.4cm}\\
-\begin{math}
-k \sim l_{PRE} + l_{PRE} + l_{POST}
-\end{math}
-\vspace{0.4cm}\\
-Where $k$ represents the total length of both isoforms and the efficiency is proportional to one isoform
-length divided by this total.
+
 
 \textbf{Please note XXX due parole sul fatto che consideriamo sia qui che sopra la lunghezza ma 
 che il significato e` diverso per chiarire la cosa?}.
@@ -358,7 +359,6 @@ And finally the formula to obtain $m/M$ using only read counts and lengths:\vspa
 m/M = \frac{l_{POST} \#r_{PRE}}{l_{PRE} \#r_{POST}} -1
 \end{math}
 \vspace{0.5cm} \\
-\textbf{XXX TODO REREcheck equations}
 
 As a simple emblematic case suppose that the PRE and POST portions have the same lengths and that the
 short and long isoforms are in perfect equilibrium (i.e. they are present in a cell in equal numbers).
