--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -46,7 +46,7 @@
 \section{Introduction}
 The alternative polyadenylation mechanism at the basis of the existence of short and long isoforms
 of the same gene is reviewed in Elkon et al~\cite{Elkon2013}.
-\textbf{Get some sentences from the poster abstract? XXX}
+\textbf{XXX put some refs}
 
 \section{Input data}
 A roar analysis starts from some alignments, obtained via standard RNAseq experiments
@@ -70,8 +70,6 @@ If it ends with ``\_POST'' it is considered the portion present only in the long
 The prefix of gene\_id should be a unique identifier for the gene and each identifier has to be
 associated with only one ``\_PRE'' and one ``\_POST'', leading to two genomic regions associated to each   
 gene\_id.
-Clearly the given coordinates should be on the same genome where the alignments
-were performed.
 
 In the package we added a file (examples/apa.gtf) that follows these directives: it is build
 upon the hg19 human genome release using the PolyA\_DB (\cite{Cheng2006}) UCSC track to obtain
@@ -81,13 +79,16 @@ their longest transcript is used to get the ``classical'' polyadenylation syte (
 of the longest transcript stored
 in UCSC) and the more distal (with respect to the TSS, that is the nearest to the canonical end
 of the transcript) reported APA
-site found in PolyA\_DB is used to define the end of the short isoform. Therefore
+site found in PolyA\_DB is used to define the end of the short isoform. 
+\textbf{XXX Paolo told me that it's the opposite}
+Therefore
 we define the ``PRE'' portion as the stretch of DNA starting from the beginning of the exon containing 
 (or proximal to) the APA site and ending at the site position, while the POST portion starts 
 there and ends
 at the canonical transcript end. Using only the nearest exon to the APA site and not the entire
 transcript to define the short isoform avoids spurious signals deriving from other alternative
 splicing events.
+\textbf{XXX For Paolo it's not clear which features are peculiar to example and which are needed}
 
 \section{Analysis steps}
 The suggestion is to use one of the two wrapper scripts 
@@ -104,6 +105,7 @@ usage, gotten via the ps command with the keyword rss, when comparing two sample
 1.3Gb) and you can use the \emph{roarWrapper}  script.
 For bigger datasets (eg. 20Gb, ~413 million reads) you will have to split your alignments in 
 small chunks: \emph{roarWrapper\_chrBychr} works on single chromosomes.
+\textbf{Discuss read length?}
 
 Please note than when working in this way FPKM
 values returned by \emph{fpkmResults} will be different from those obtained with the analysis
@@ -132,6 +134,7 @@ rds <- RoarDatasetFromFiles(bamRight, bamLeft, gtf)
 This is the first step in the Roar analysis: it counts reads overlapping with the
 PRE/POST portions defined in the given gtf/GRanges annotation.
 Reads of the given bam are accounted for with the following rules:
+\textbf{XXX clarify}
 \begin{enumerate}
        \item reads falling over different gene\_id PRE or POST portions are discarded
        \item reads falling on a single gene\_id PRE (or POST) portion are considered, even if they fall 
@@ -161,6 +164,7 @@ the opposite for roar < 1). Negative or NA m/M or roar occurs in not definite si
 such as counts equal to zero for PRE or POST portions.
 If for one of the conditions there is more than one sample, like in this example
 that has four and three samples for the two conditions, then calculations are performed on average counts.
+\textbf{XXX Paolo wonders if using total counts could be better to consider library size}
 %<<eval=FALSE>>=
 <<>>= 
 rds <- computeRoars(rds)
@@ -168,8 +172,8 @@ rds <- computeRoars(rds)
 \subsection{Computing p-values}
 This is the third step in the Roar analyses: it applies a Fisher test comparing counts falling
 on the PRE and POST portion in the right and left conditions for every gene. If there are multiple samples for
-a condition every combination of comparisons between the samples lists is considered - for examplein this case we have four and three samples, therefore it will calculate 12 p-values.
-
+a condition every combination of comparisons between the samples lists is considered - for example in this case we have four and three samples, therefore it will calculate 12 p-values.
+\textbf{XXX paired comparison?}
 %<<eval=FALSE>>==
 <<>>= 
 rds <- computePvals(rds)
@@ -191,7 +195,7 @@ short isoform with respect to the long one in the right (or left) condition, the
 represents the roar and it's bigger than one when the shorter isoform is relatively more expressed in the right
 condition (and the other way around when it's smaller than one). The pval column stores the results
 of the Fisher tests when both conditions have a single sample, while the multiplication of all the
-possible combinations p-values for multiple samples analysis. 
+possible combinations p-values for multiple samples analysis. \textbf{XXX Fisher procedure!}
 
 In this case for example there will be columns ``pvalue\_1\_1'' up to ``pvalue\_4\_3'': the first
 number represents the number of the considered sample for the right condition, while
@@ -201,6 +205,7 @@ the lists passed to the \Rclass{RoarDataset} constructors).
 All other functions are simply helper functions: \emph{fpkmResults} adds columns "rightValue" and "leftValue"
 representing the level of expression of the relative gene in the right (or left) condition, while
 \emph{countResults} puts in that columns the number of read that were counted on the PRE portion of genes.
+\textbf{XXX right should be treatment and left control}
 \emph{standardFilter} get a parameter with a cutoff for the FPKM value and 
 selects only genes with an expression
 higher than that and without any NA/Inf value for m/M or roar (deriving from not definite situations
@@ -230,6 +235,9 @@ to save single steps counts and then calculate ``whole'' FPKM values.
 
 \section{Appendix}\label{appendix}
 \subsection{m/M calculations}
+
+\textbf{XXX Paolo: equiprobability only later, k in denominator, remove
+system solution}
 
 To correctly evaluate the quantities ratios of the short and long isoforms counts of the reads
 falling over the two
