--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -1,10 +1,8 @@
 %\VignetteIndexEntry{Identify differential APA usage from RNA-seq alignments}
 %\VignettePackage{roar}
 \documentclass{article}
-\author{Elena Grassi$^{1}$, Antonio Lembo$^{1}$, Elisa Mariella$^{1}$, Ivan Molineris$^{1}$ 
-\\ and Paolo Provero$^{1,2}$ \\
-  $^1$ Department of Molecular Biotechnologies and Health Sciences,\\ MBC, University of Turin, Italy\\
-  $^2$ Center for Translational Genomics and Bioinformatics,\\ San Raffaele Scientific Institute, Milan, Italy
+\author{Elena Grassi\\
+Department of Molecular Biotechnologies and Health Sciences,\\ MBC, University of Turin, Italy\\
 }
 \usepackage{Sweave}
 
@@ -16,7 +14,7 @@
 
 \title{Identify differential APA usage from RNA-seq alignments}
 
-\date{\Rpackage{roar} version \Sexpr{packageDescription("roar")$Version} (Last revision 2013-10-14)}
+\date{\Rpackage{roar} version \Sexpr{packageDescription("roar")$Version} (Last revision 2013-11-19)}
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 %\SweaveOpts{concordance=TRUE}
@@ -46,7 +44,7 @@
 \section{Introduction}
 The alternative polyadenylation mechanism at the basis of the existence of short and long isoforms
 of the same gene is reviewed in Elkon et al~\cite{Elkon2013}.
-\textbf{XXX put some refs}
+For the relevance of this phenomenon to development and cancer see~\cite{Sandberg2008,Mayr2009,Ji2009}.
 
 \section{Input data}
 A roar analysis starts from some alignments, obtained via standard RNAseq experiments
@@ -77,10 +75,9 @@ coordinates of alternative polyadenylation sites (from now on addressed as APA).
 Every gene with at least one APA site is considered; 
 their longest transcript is used to get the ``classical'' polyadenylation syte (canonical end
 of the longest transcript stored
-in UCSC) and the more distal (with respect to the TSS, that is the nearest to the canonical end
+in UCSC) and the more proximal  (with respect to the TSS, that is the farther to the canonical end
 of the transcript) reported APA
 site found in PolyA\_DB is used to define the end of the short isoform. 
-\textbf{XXX Paolo told me that it's the opposite}
 Therefore
 we define the ``PRE'' portion as the stretch of DNA starting from the beginning of the exon containing 
 (or proximal to) the APA site and ending at the site position, while the POST portion starts 
@@ -88,7 +85,12 @@ there and ends
 at the canonical transcript end. Using only the nearest exon to the APA site and not the entire
 transcript to define the short isoform avoids spurious signals deriving from other alternative
 splicing events.
-\textbf{XXX For Paolo it's not clear which features are peculiar to example and which are needed}
+
+To summarize the package requirements are: every entry in the gtf should have an attribute called ``gene\_id''
+formed by a prefix representing unique gene identifiers and a suffix. The suffix defines if the given 
+coordinates refer to the portion of this gene common between the short and the long isoform (``\_PRE'')
+or to the portion pertaining only to the long isoform (``\_POST''). Every gene identifier must appear
+two (and only two) times in the gtf, one with the suffix ``\_PRE'' and one with ``\_POST''.
 
 \section{Analysis steps}
 The suggestion is to use one of the two wrapper scripts 
@@ -100,10 +102,12 @@ to call directly the methods to get the results (eg. \emph{totalResults}),
 in this way all the preceding steps will be performed automatically.
 
 Loading and handling alignments data require a lot of memory: if you have small datasets
-(up until 2.5Gb, ~58.5 million reads) 4 Gb of RAM will be more than sufficient (peak memory 
+(up until 2.5Gb, ~58.5 million reads with a length of 50 bp)
+4 Gb of RAM will be more than sufficient (peak memory 
 usage, gotten via the ps command with the keyword rss, when comparing two samples of 2.5Gb: ~
 1.3Gb) and you can use the \emph{roarWrapper}  script.
-For bigger datasets (eg. 20Gb, ~413 million reads) you will have to split your alignments in 
+For bigger datasets (eg. 20Gb, ~413 million reads with a length of 101bp) 
+you will have to split your alignments in 
 small chunks: \emph{roarWrapper\_chrBychr} works on single chromosomes.
 \textbf{Discuss read length?}
 
@@ -164,7 +168,7 @@ the opposite for roar < 1). Negative or NA m/M or roar occurs in not definite si
 such as counts equal to zero for PRE or POST portions.
 If for one of the conditions there is more than one sample, like in this example
 that has four and three samples for the two conditions, then calculations are performed on average counts.
-\textbf{XXX Paolo wonders if using total counts could be better to consider library size}
+
 %<<eval=FALSE>>=
 <<>>= 
 rds <- computeRoars(rds)
@@ -173,7 +177,7 @@ rds <- computeRoars(rds)
 This is the third step in the Roar analyses: it applies a Fisher test comparing counts falling
 on the PRE and POST portion in the right and left conditions for every gene. If there are multiple samples for
 a condition every combination of comparisons between the samples lists is considered - for example in this case we have four and three samples, therefore it will calculate 12 p-values.
-\textbf{XXX paired comparison?}
+
 %<<eval=FALSE>>==
 <<>>= 
 rds <- computePvals(rds)
@@ -195,7 +199,9 @@ short isoform with respect to the long one in the right (or left) condition, the
 represents the roar and it's bigger than one when the shorter isoform is relatively more expressed in the right
 condition (and the other way around when it's smaller than one). The pval column stores the results
 of the Fisher tests when both conditions have a single sample, while the multiplication of all the
-possible combinations p-values for multiple samples analysis. \textbf{XXX Fisher procedure!}
+possible combinations p-values for multiple samples analysis. Single users will be able
+to apply more significant procedures (eg. the Fisher or the Kost methods~\cite{Fisher,Kost})
+to combine p-values considering their specific experimental setting.
 
 In this case for example there will be columns ``pvalue\_1\_1'' up to ``pvalue\_4\_3'': the first
 number represents the number of the considered sample for the right condition, while
@@ -236,9 +242,6 @@ to save single steps counts and then calculate ``whole'' FPKM values.
 \section{Appendix}\label{appendix}
 \subsection{m/M calculations}
 
-\textbf{XXX Paolo: equiprobability only later, k in denominator, remove
-system solution}
-
 To correctly evaluate the quantities ratios of the short and long isoforms counts of the reads
 falling over the two
 transcript portions (as previously defined: PRE is the portion common between the two isoforms, while POST is
@@ -248,23 +251,31 @@ on POST derive exclusively
 from the longer one; another more trivial question that has to be addressed is that reads fall with larger
 frequencies on longer stretches of RNA.
 
-We define $l_{PRE}$ as the length of the PRE portion and $l_{POST}$ as the length of the POST one
-therefore assuming that each nucleotide has the same probability of giving rise to a read (equiprobability
-assumption) we
-can say that the total number of reads falling over a transcript in its entirety ($N$) derives
+We can say that the total number of reads falling over a transcript in its entirety ($N$) derives
 %and we know that the total number of reads falling over a transcript ($N$) in its entirety derives
 from the relative abundance of the two isoforms and their potential of generating reads; 
 that is: $ N = \epsilon_{M}  M + \epsilon_{m}  m$
 where $m$ is the quantity of the short isoform, $M$ of the long one and $\epsilon$ identifies their
 efficiency in generating reads.
 
-\textbf{[ $N_{PRE} / N_{TOT} \doteq l_{PRE}$ and similarly $N_{POST} / N_{TOT} \doteq l_{POST}$
-assuming that $N_{PRE}$ and $N_{POST}$ are XXX. TODO which is the definition of $N_{PRE}$? Difference
-from $\#r_{PRE}$, \ldots. ?
-Do we need this equation to explain the following part? It does not seem so...
-We are now considering reads across PRE/POST, does this assumption difference change something?]}
+Assuming the equiprobability of reads distribution (that is each nucleotide has the same probability 
+of finding itself in a read) the efficiency in generating reads of the two isoforms is
+related to their lengths (with the addition of a constant of proportionality $k$):\vspace{0.4cm} \\
+\begin{math}
+\epsilon_{M} = k (l_{PRE}+l_{POST})
+\end{math}
+\vspace{0.4cm}\\
+\begin{math}
+\epsilon_{m} = k (l_{PRE})
+\end{math}
+%\vspace{0.4cm}\\
+%\begin{math}
+%k \sim l_{PRE} + l_{PRE} + l_{POST}
+%\end{math}
+\vspace{0.4cm}\\
 
-We can now obtain the number of reads falling on the two portions as:\vspace{0.5cm}
+Defining $l_{PRE}$ as the length of the PRE portion and $l_{POST}$ as the length of the POST 
+we can now obtain the number of reads falling on the two portions as:\vspace{0.4cm}\\
 \begin{math}
 \#r_{PRE} = \epsilon_{M} M (\frac{l_{PRE}}{l_{PRE}+l_{POST}}) + \epsilon_{m}  m
 \end{math}
@@ -281,26 +292,6 @@ These two equations reflect the fact that all the reads deriving from the short 
 while the ones deriving from the long one are distributed over the PRE and POST portions depending
 on their lengths.
 
-Assuming the equiprobability of read distribution (that is each nucleotide has the same probability 
-of finding itself in a read) the efficiency in generating reads of the two isoforms is itself
-related to their lengths (with the addition of a constant of proportionality $k$):\vspace{0.4cm} \\
-\begin{math}
-\epsilon_{M} = \frac{l_{PRE}+l_{POST}}{k}
-\end{math}
-\vspace{0.4cm}\\
-\begin{math}
-\epsilon_{m} = \frac{l_{PRE}}{k}
-\end{math}
-%\vspace{0.4cm}\\
-%\begin{math}
-%k \sim l_{PRE} + l_{PRE} + l_{POST}
-%\end{math}
-\vspace{0.4cm}\\
-
-
-\textbf{Please note XXX due parole sul fatto che consideriamo sia qui che sopra la lunghezza ma 
-che il significato e` diverso per chiarire la cosa?}.
-
 We can now setup a system of equations aimed at obtaining the $m/M$ value in terms of the numbers of
 reads falling over the two portions and their lengths.\vspace{0.5cm}
 
@@ -312,57 +303,7 @@ We start from:
   \end{array} \right.
 \end{math}\vspace{0.5cm}\\
 
-Then with simple algebraic steps:
-\begin{math} \left\{
-  \begin{array}{l}
-      m = \frac{\#r_{PRE}-\epsilon_{M} M (\frac{l_{PRE}}{l_{PRE}+l_{POST}})}{\epsilon_{m} } \\
-      M = \frac{\#r_{POST}}{\epsilon_{M} (\frac{l_{POST}}{l_{PRE}+l_{POST}}) }
-  \end{array} \right.
-\end{math}
-\vspace{0.5cm} \\
-\begin{math} \left\{
-  \begin{array}{l}
-      m = \frac{\#r_{PRE}-\epsilon_{M} \frac{\#r_{POST}}{\epsilon_{M} (\frac{l_{POST}}{l_{PRE}+l_{POST}}) }
-      (\frac{l_{PRE}}{l_{PRE}+l_{POST}})}{\epsilon_{m} } \\
-      M = ``
-  \end{array} \right.
-\end{math}
-\vspace{0.5cm} \\
-\begin{math} \left\{
-  \begin{array}{l}
-      m = \frac{\#r_{PRE}-  \#r_{POST} (\frac{l_{PRE}+l_{POST}}{l_{POST}}) (\frac{l_{PRE}}{l_{PRE}+l_{POST}})}{\epsilon_{m} } \\
-      M = ``
-  \end{array} \right.
-\end{math}
-\vspace{0.5cm} \\
-\begin{math} \left\{
-  \begin{array}{l}
-      m = \frac{\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})}{\epsilon_{m} } \\
-      M = ``
-  \end{array} \right.
-\end{math}
-\vspace{0.5cm} \\
-\begin{math} \left\{
-  \begin{array}{l}
-      m = (\frac{k}{l_{PRE}}) (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})) \\
-      M = \frac{k}{l_{PRE}+l_{POST}} \frac{(l_{PRE}+l_{POST})}{l_{POST}} \#r_{POST}
-  \end{array} \right.
-\end{math}
-\vspace{0.5cm} \\
-\begin{math}
-m/M = \frac{(\frac{k}{l_{PRE}}) (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}}))}{ (\frac{k}{l_{POST}}) \#r_{POST}}
-\end{math}
-\vspace{0.5cm} \\
-\begin{math}
-m/M =  \frac{l_{POST}}{l_{PRE} \#r_{POST}} (\#r_{PRE}-\#r_{POST} (\frac{l_{PRE}}{l_{POST}})) 
-\end{math}
-\vspace{0.5cm} \\
-\begin{math}
-m/M = \frac{l_{POST} \#r_{PRE}}{l_{PRE} \#r_{POST}} 
-- \frac{l_{POST} \#r_{POST} l_{PRE}}{\#r_{POST} l_{PRE} l_{POST}}
-\end{math}
-\vspace{0.5cm} \\
-And finally the formula to obtain $m/M$ using only read counts and lengths:\vspace{0.5cm}\\
+Then with simple algebraic steps the system can be solved yielding the formula to obtain $m/M$ using only read counts and lengths:\vspace{0.5cm}\\
 \begin{math}
 m/M = \frac{l_{POST} \#r_{PRE}}{l_{PRE} \#r_{POST}} -1
 \end{math}
@@ -380,8 +321,7 @@ as they can derive only from the long isoform it is reasonable to assign them to
 Portion lengths should be corrected to keep in consideration read lengths and the just cited
 assignment to POST of the spanning reads, therefore:\vspace{0.5cm}\\
 \begin{math}
-l^{\prime}_{PRE} = l_{PRE} % come si scrivono gli apici in math mode?
-\end{math}
+l^{\prime}_{PRE} = l_{PRE}
 \vspace{0.2cm} \\
 \begin{math}
 l^{\prime}_{POST} = l_{POST} + readLength - 1
